@@ -2,6 +2,8 @@ Development Portal (2020-04-01 shi)
 ==============================
 Fix display recipient-country code for org file
 Fix display reporting org 99 url
+Display code for recipient-country for org file
+Display code for recipient region when vocab is 1
 
 
 Development Portal (2020-03-30 shi)
